--- a/SpecFlowProject2/SpecFlowProject2.csproj
+++ b/SpecFlowProject2/SpecFlowProject2.csproj
@@ -25,6 +25,12 @@
     
     <PackageReference Include="FluentAssertions" Version="6.6.0" />
     
+
+    
+
+    
+    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.69" />
+    
   </ItemGroup>
 
   <ItemGroup>
